// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reset password reducer should handle LOADING 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": true,
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
}
`;

exports[`reset password reducer should handle PASSWORD_RESET_ERROR 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordResetError": "invalid email",
  "passwordResetSuccess": "",
  "user": Object {},
}
`;

exports[`reset password reducer should handle PASSWORD_RESET_SUCCESS 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordResetError": "",
  "passwordResetSuccess": "Please check your email",
  "user": Object {},
}
`;

exports[`reset password reducer should return the initial state 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
}
`;
